syntax = "proto3";

option go_package = "protobuf/compiled";

import "google/protobuf/empty.proto";

service UserService {
  rpc GetUserById (User) returns (User) {}
  rpc GetUserList (google.protobuf.Empty) returns(UserList) {}
}

service AdminUserService {
  rpc CreateUser (User) returns (User) {}
  rpc UpdateUser (User) returns (User) {}
  rpc DeleteUser (User) returns (Response) {}
}

message User {
  optional string id = 1 ;
  optional string email = 2;
  optional string username = 3;
  optional string password = 4;
  optional bool admin = 5;
}

message UserList {
  repeated User users = 1 ;
}

message Status {
  int32 code = 1;
  string message = 2;
  bool error = 3;
}

message Response {
  oneof response {
    User user = 1;
    Status status = 2;
  }
}